# matrixbot

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  API.md  API_SERVER_CONSOLIDATION.md  ARCHITECTURE.md  DEVELOPMENT.md  Dockerfile  Dockerfile.test  FARCASTER_ENHANCEMENTS.md  FUTURE_IMPROVEMENTS.md  JSON_CENTRIC_README.md  LICENSE  LOCAL_DEVELOPMENT.md  Makefile  PAYLOAD_OPTIMIZATION_SUMMARY.md  PHASE_1_1_VERIFICATION.md  README.md  S3_IMPLEMENTATION.md  S3_MIGRATION_GUIDE.md  TESTING.md  action_execution_service.py  action_registry_service.py  actions_registry.json  ai_inference_service.py  analyze_live_prompt.py  analyze_payload_dumps.py  auto_posting_analysis.py  chatbot.Dockerfile  clear_matrix_store.py  control_panel.py  database.py  debug_farcaster_queue_processing.py  debug_world_state.py  demo_delete_functionality.py  demo_matrix_room_management.py  docker-compose.test.yml  docker-compose.yml  (+107 more)
.devcontainer/: devcontainer.json
.github/workflows/: ci-cd.yml  ci.yml  deploy.yml  test.yml
arweave-service/: Dockerfile  README.md  main.py  pyproject.toml  test_main.py
arweave_uploader_service/: Dockerfile  README.md  entrypoint.sh  main.py  pyproject.toml
available_tools/: delegate_to_openrouter_tool.py  describe_image_tool.py  farcaster_get_notifications_tool.py  farcaster_manage_settings_tool.py  get_room_info_tool.py  manage_channel_summary_tool.py  manage_summarization_prompt_tool.py  manage_system_prompt_tool.py  manage_user_memory_tool.py  react_to_message_tool.py  send_reply_tool.py
chatbot/: __init__.py  __main__.py  api_server.py  config.py  enhanced_main.py  exceptions.py  main.py  main_with_ui.py  main_with_ui_deprecated.py
chatbot-backup-20250606-165051/: docker-compose.yml  pyproject.toml
chatbot/api_server/: __init__.py  dependencies.py  main.py  schemas.py  secure_server.py  security.py  server.py
chatbot/config/: __init__.py  enhanced_config.py  secret_manager.py
chatbot/context_storage/: state_change_1748568883.8075013_wait.json  state_change_1748569286.727901_send_matrix_reply.json  state_change_1748569313.2064514_send_matrix_reply.json
chatbot/core/: __init__.py  ai_engine.py  ai_engine_consolidated.py  ai_engine_old_backup.py  ai_engine_unified.py  ai_engine_v2.py  config_manager.py  context.py  enhanced_orchestrator.py  enhanced_world_state_manager.py  error_handling.py  history_recorder.py  history_recorder.py.backup  integration_manager.py  json_observer_orchestrator.py  node_manager.py  orchestrator.py  performance_monitor.py  persistence.py  persistence_v2.py  secrets.py  world_state.py
chatbot/integrations/: arweave_uploader_client.py  base.py  base_nft_service.py  base_observer.py  base_service.py  dual_storage_manager.py  ecosystem_token_service.py  eligibility_service.py  github_service.py  google_ai_media_client.py  replicate_client.py  s3_storage_client.py  s3_storage_service.py  veo_service.py
chatbot/tools/: __init__.py  arweave_service.py  base.py  core_tools.py  describe_image_tool.py  developer_tools.py  do_not_respond_tool.py  executor.py  farcaster_cast_tool.py  farcaster_get_feed_tool.py  farcaster_like_tool.py  farcaster_recast_tool.py  farcaster_tools.py  frame_tools.py  manage_channel_summary_tool.py  manage_summarization_prompt_tool.py  manage_system_prompt_tool.py  manage_user_memory_tool.py  matrix_tools.py  media_generation_tools.py  message_enhancement.py  nft_minting_tools.py  permaweb_tools.py  proactive_conversation_tools.py  registry.py  research_tools.py  s3_service.py  send_message_tool.py  send_reply_tool.py  service_oriented_farcaster_tools.py  service_oriented_matrix_tools.py  update_farcaster_channel_tool.py  user_profiling_tools.py  view_channel_context_tool.py  web_tools.py  world_state_tools.py
chatbot/utils/: git_utils.py  logging_config.py  markdown_utils.py  token_utils.py
docs/: AI_PROMPT_LOGGING.md  PLATFORM_ERROR_PATTERNS.md  matrix-sdk.md
old_tests/: test_context_extended_old.py
old_tests/duplicates/: test_context_extended_fixed.py  (+1 more)
s3-service/: Dockerfile  README.md  __init__.py  integration_demo.py  main.py  pyproject.toml  pytest.ini  s3_service.py  s3_uploader_client.py  test_main.py  test_s3_service.py
scripts/: ai_engine_migration.py  analyze_live_prompt.py  control_panel.py  deploy.sh  dynamic_optimizer.py  generate_arweave_wallet.py  matrix_diagnostics.py  performance_monitor.py  setup-docker.sh  setup_payload_dumping.py  setup_synapse.sh  validate-docker.sh  validate_triggers.py
src/: .env.example  IMPLEMENTATION_SUMMARY.md  README.md  action_executor.py  ai_engine.py  context_aware_orchestrator.py  context_aware_orchestrator_v2.py  context_manager.py  demo.py  demo_context_system.py  event_orchestrator.py  farcaster_observer.py  matrix_observer.py  test_context_manager.py  test_system.py  world_state.py
tests/: __init__.py  conftest.py  conftest_enhanced.py  factories.py  test_ai_blindness_fix.py  test_ai_engine.py  test_ai_engine_fixed.py  test_api_security.py  test_api_server_comprehensive.py  test_arweave_service.py  test_context_extended.py  test_core.py  test_cross_platform_awareness.py  test_enhanced_config.py  test_enhanced_integration.py  test_exceptions.py  test_executor_extended.py  test_farcaster_authoritative_duplicate_detection.py  test_farcaster_fix.py  test_farcaster_observer_extended.py  test_farcaster_rate_limiting.py  test_farcaster_tools_follow_dm.py  test_feedback_loop_prevention.py  test_goal_system_integration.py  test_goal_system_standalone.py  test_history_recorder_enhanced.py  test_history_recorder_simple.py  test_image_coordination.py  test_image_enhancement.py  test_integration.py  test_integration_system.py  test_matrix_arweave_integration.py  test_matrix_gateway_service.py  test_matrix_markdown.py  test_matrix_s3_integration.py  test_matrix_tools_and_observer.py  test_media_action_tracking.py  test_media_gallery_integration.py  test_neynar_conversation_lookup.py  test_neynar_rate_limiting.py  (+29 more)
ui/: app.js  index.html  package.json
ui-nextjs/: Dockerfile  next.config.js  package.json  tailwind.config.ts
(+143 files in other folders)
