[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "chatbot"
version = "0.1.0"
description = "A context-aware AI chatbot with Matrix and Farcaster integration"
authors = ["Ratimics <contact@ratimics.com>"]
license = "CC-BY-NC-4.0"
readme = "README.md"
packages = [{include = "chatbot"}]

[tool.poetry.dependencies]
python = "^3.10"
aiosqlite = "^0.19.0"
httpx = "^0.25.0"
aiohttp = "^3.9.0"
matrix-nio = "^0.21.0"
python-dotenv = "^1.0.0"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
pydantic-settings = "^2.0.0"
markdown = "^3.5.0"
ollama = "^0.1.7"
colorlog = "^6.7.0"
flask = "^3.0.0"
pillow = "^10.0.0"
google-genai = "^0.8.0"
solders = "^0.26.0"
web3 = "^7.12.0"
eth-account = "^0.13.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
black = "^23.9.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.6.0"

[tool.poetry.scripts]
chatbot = "chatbot.main:main"
control-panel = "control_panel:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["chatbot"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "nio.*",
    "httpx.*",
]
ignore_missing_imports = true
