[tool.poetry]
name = "chatbot"
version = "0.1.0"
description = "A context-aware AI chatbot with Matrix and Farcaster integration."
authors = ["Chatbot Team <your-email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
# --- Core & Web ---
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
httpx = "^0.28.1"

# --- AI & LLM ---
google-genai = "^1.19.0"

# --- Matrix Integration ---
matrix-nio = {extras = ["e2e"], version = "^0.24.0"}

# --- Blockchain & Web3 ---
web3 = "^6.15.1"
aiohttp = "^3.9.5"

# --- Utilities ---
python-dotenv = "^1.0.1"
markdown = "^3.6"
pillow = "^10.3.0"
base58 = "^2.1.1"
aiosqlite = "^0.21.0"
cryptography = "^45.0.3"
arweave-python-client = "^1.0.19"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"